--- a/CurrencyConverter/CurrencyConverter/Info.plist
+++ b/CurrencyConverter/CurrencyConverter/Info.plist
@@ -2,12 +2,24 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+		<key>NSExceptionDomains</key>
+		<dict/>
+	</dict>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
 		<false/>
 		<key>UISceneConfigurations</key>
 		<dict>
+			<key>NSAppTransportSecurity</key>
+			<dict>
+				<key>NSAppTransportSecurity</key>
+				<true/>
+			</dict>
 			<key>UIWindowSceneSessionRoleApplication</key>
 			<array>
 				<dict>
